# unix_note_code

./: .gitignore  LICENSE  README.md  bootstrap  configure.ac
include/: apue.h
lib/: Makefile.am  libstderr.la  stdout_error.c  stdout_error.lo
lib/.deps/: stdout_error.Plo
lib/.libs/: libstderr.la  libstderr.lai  libstderr.so.0.0.0
src/: Makefile.am  jjcm  sed.sh
src/01/: 1_1  1_1.c  1_2.c  1_3.c  1_4.c  1_5.c  1_6.c  1_7.c  1_8.c  Makefile.am
src/01/.deps/: 1_1.Po
src/01/.libs/: 1_1  lt-1_1
src/03/: 3_1  3_1.c  3_2  3_2.c  3_4  3_4.c  3_5  3_5.c  Makefile.am
src/03/.deps/: 3_1.Po  3_2.Po  3_4.Po  3_5.Po
src/03/.libs/: 3_1  3_2  3_4  3_5
src/04/: 4_1  4_1.c  4_10  4_10.c  4_2  4_2.c  4_3  4_3.c  4_4  4_4.c  4_5  4_5.c  4_6  4_6.c  4_7  4_7.c  4_8  4_8.c  4_9  4_9.c  Makefile.am
src/04/.deps/: 4_1.Po  4_10.Po  4_2.Po  4_3.Po  4_4.Po  4_5.Po  4_6.Po  4_7.Po  4_8.Po  4_9.Po
src/04/.libs/: 4_1  4_10  4_2  4_3  4_4  4_5  4_6  4_7  4_8  4_9
src/05/: 5_1  5_1.c  5_2  5_2.c  5_3  5_3.c  5_4  5_4.c  5_5  5_5.c  Makefile.am
src/05/.deps/: 5_1.Po  5_2.Po  5_3.Po  5_4.Po  5_5.Po
src/05/.libs/: 5_1  5_2  5_3  5_4  5_5
src/06/: 6_1  6_1.c  Makefile.am
src/06/.deps/: 6_1.Po
src/06/.libs/: 6_1
src/07/: 7_1  7_1.c  7_2  7_2.c  Makefile.am
src/07/.deps/: 7_1.Po  7_2.Po
src/07/.libs/: 7_1  7_2
src/08/: 08_01  08_01.c  08_02  08_02.c  08_03  08_03.c  Makefile.am
src/08/.deps/: 08_01.Po  08_02.Po  08_03.Po
src/08/.libs/: 08_01  08_02  08_03  lt-08_03
src/10/: 10_01  10_01.c  10_02  10_02.c  10_04  10_04.c  10_05  10_05.c  Makefile.am
src/10/.deps/: 10_01.Po  10_02.Po  10_04.Po  10_05.Po
src/10/.libs/: 10_01  10_02  10_04  10_05  lt-10_02  lt-10_05
