#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(unix_note, 1.1, nmred_2008@126.com)
AC_CONFIG_AUX_DIR(build)
AM_INIT_AUTOMAKE(unix_note, 1.1)
AC_CONFIG_SRCDIR([include/apue.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
				 lib/Makefile
                 src/Makefile
                 src/01/Makefile
                 src/03/Makefile
                 src/04/Makefile
                 src/05/Makefile
                 src/06/Makefile
                 src/07/Makefile
                 src/08/Makefile
                 src/10/Makefile
				 ])
AC_OUTPUT
