
INCLUDES = -I $(top_builddir)/include
bin_PROGRAMS = 3_1 3_2 3_4 3_5
3_1_SOURCES =3_1.c
3_1_LDADD = $(top_builddir)/lib/libstderr.la
3_2_SOURCES =3_2.c
3_2_LDADD = $(top_builddir)/lib/libstderr.la
3_4_SOURCES =3_4.c
3_4_LDADD = $(top_builddir)/lib/libstderr.la
3_5_SOURCES =3_5.c
3_5_LDADD = $(top_builddir)/lib/libstderr.la
