
INCLUDES = -I $(top_builddir)/include
bin_PROGRAMS = 5_1 5_2 5_3 5_4 5_5
5_1_SOURCES =5_1.c
5_1_LDADD = $(top_builddir)/lib/libstderr.la
5_2_SOURCES =5_2.c
5_2_LDADD = $(top_builddir)/lib/libstderr.la
5_3_SOURCES =5_3.c
5_3_LDADD = $(top_builddir)/lib/libstderr.la
5_4_SOURCES =5_4.c
5_4_LDADD = $(top_builddir)/lib/libstderr.la
5_5_SOURCES =5_5.c
5_5_LDADD = $(top_builddir)/lib/libstderr.la
